Fixed bottom button alignment using display:block now I know

--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -32,4 +32,9 @@ body {
 button {
   background: white;
   border: 1px solid #eee;
+  display: block;
+  margin: 0 auto;
+  padding: 8px 24px;
 }
+
+/* I didn't know you could add multiple parameters to things like the margin and the padding, good to know
